[gd_scene load_steps=3 format=3 uid="uid://bnbxaeoqkl1wn"]

[ext_resource type="Script" uid="uid://103kty3xkuwm" path="res://entities/tanks/base_cannon.gd" id="1_8edx3"]
[ext_resource type="Texture2D" uid="uid://p0c48yw18unq" path="res://assets/graphics/tanks/tanks_turret1.png" id="2_8edx3"]

[node name="BaseCannon" type="Node2D"]
script = ExtResource("1_8edx3")

[node name="view" type="Sprite2D" parent="."]
position = Vector2(20, 0)
texture = ExtResource("2_8edx3")

[node name="mazzle_from" type="Marker2D" parent="."]
position = Vector2(39, 0)

[node name="mazzle_to" type="Marker2D" parent="."]
position = Vector2(50, 0)
